--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -4,9 +4,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 
   img {
-    width: 30%;
+    width: 20%;
     border-radius: 50%;
   }
 
