--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -4,7 +4,6 @@
   left: 0;
   height: 100%;
   width: 20rem;
-  // background-color: lightcyan;
   box-shadow: 2px 2px 50px rgb(204, 201, 201);
   overflow: scroll;
 
@@ -23,7 +22,8 @@
   }
 
   &:hover {
-    background-color: rgb(211, 241, 250);
+    background-color: rgb(221, 246, 253);
+    cursor: pointer;
   }
 }
 
@@ -56,4 +56,8 @@
   background-color: rgba(155, 155, 155, 0.5);
   border-radius: 20px;
   border: transparent;
+}
+
+.library-song.selected {
+  background-color: rgb(178, 231, 247);
 }
