Added showing/hiding the library by clicking on the icon

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,6 +6,9 @@
   width: 20rem;
   box-shadow: 2px 2px 50px rgb(204, 201, 201);
   overflow: scroll;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  opacity: 0;
 
   h2 {
     padding: 2rem;
@@ -60,4 +63,9 @@
 
 .library-song.selected {
   background-color: rgb(178, 231, 247);
+}
+
+.library-active {
+  transform: translateX(0%);
+  opacity: 1;
 }
