--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -9,6 +9,7 @@
   transform: translateX(-100%);
   transition: all 0.5s ease;
   opacity: 0;
+  background-color: white;
 
   h2 {
     padding: 2rem;
@@ -68,4 +69,10 @@
 .library-active {
   transform: translateX(0%);
   opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .library {
+    width: 100%;
+  }
 }
