--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -28,7 +28,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  
+
   svg {
     cursor: pointer;
   }
@@ -56,8 +56,40 @@ input[type="range"]::-webkit-slider-thumb {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100% ;
+  width: 100%;
   height: 100%;
   pointer-events: none;
   background-color: rgb(224, 224, 224);
+}
+
+@media screen and (max-width: 1700px) {
+  .time-control {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 1350px) {
+  .time-control {
+    width: 70%;
+  }
+
+  .play-control {
+    width: 35%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .time-control {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .time-control {
+    width: 90%;
+  }
+
+  .play-control {
+    width: 60%;
+  }
 }
