--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
+  transition: background 0.5s ease;
 
   img {
     width: 30%;
@@ -66,7 +67,7 @@
   background-color: rgb(178, 231, 247);
 }
 
-.library-active {
+.library.library-active {
   transform: translateX(0%);
   opacity: 1;
 }
