--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -10,13 +10,6 @@
   display: flex;
   width: 50%;
 
-  input {
-    width: 100%;
-    -webkit-appearance: none;
-    background: transparent;
-    cursor: pointer;
-  }
-
   p {
     padding: 1rem;
   }
@@ -28,10 +21,18 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  transition: all 0.5s ease;
 
   svg {
     cursor: pointer;
   }
+}
+
+input {
+  width: 100%;
+  -webkit-appearance: none;
+  background: transparent;
+  cursor: pointer;
 }
 
 input[type="range"]:focus {
@@ -44,7 +45,7 @@ input[type="range"]::-webkit-slider-thumb {
   width: 16px;
 }
 
-.track {
+.input-wrapper {
   position: relative;
   width: 100%;
   height: 1rem;
@@ -52,7 +53,7 @@ input[type="range"]::-webkit-slider-thumb {
   overflow: hidden;
 }
 
-.animate-track {
+.animate-input-wrapper {
   position: absolute;
   top: 0;
   left: 0;
@@ -60,6 +61,10 @@ input[type="range"]::-webkit-slider-thumb {
   height: 100%;
   pointer-events: none;
   background-color: rgb(224, 224, 224);
+}
+
+.input-wrapper.volume {
+  width: 30%;
 }
 
 @media screen and (max-width: 1700px) {
