--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -20,6 +20,20 @@
   }
 }
 
+@keyframes rotate-song {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotate-song 25s linear forwards infinite;
+}
+
 @media screen and (max-width: 1700px) {
   .song-container {
     img {
